--- a/app.json
+++ b/app.json
@@ -26,6 +26,17 @@
     },
     "plugins": [
       "expo-font"
-    ]
+   ],
+    "extra": {
+      "eas": {
+        "projectId": "85cd7e99-fbb0-423f-9e68-18c59490b1e1"
+      }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/85cd7e99-fbb0-423f-9e68-18c59490b1e1"
+    }
   }
 }
