--- a/package.json
+++ b/package.json
@@ -17,8 +17,11 @@
     "@react-navigation/stack": "^7.1.1",
     "axios": "^1.8.4",
     "expo": "^53.0.0",
+    "expo-fast-image": "^1.1.3",
     "expo-font": "~13.3.1",
     "expo-status-bar": "~2.2.3",
+    "expo-updates": "~0.27.4",
+    "fs-extra": "^11.3.0",
     "react": "19.0.0",
     "react-native": "0.79.2",
     "react-native-dotenv": "^3.4.11",
@@ -27,8 +30,7 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-vector-icons": "^10.2.0",
-    "expo-updates": "~0.27.4"
+    "react-native-vector-icons": "^10.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.26.0"
